--- a/index.html
+++ b/index.html
@@ -3,114 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Jurnal Terakreditasi</title>
+    <title>Review Jurnal - BIOEDUCATION JOURNAL</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #e9ecef;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            background: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #343a40;
-            margin-bottom: 30px;
-        }
-        h2 {
-            color: #495057;
-            border-bottom: 2px solid #6c757d;
-            padding-bottom: 5px;
-        }
-        p {
+            font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: #495057;
+            margin: 0;
+            padding: 0;
         }
-        table {
+
+        header {
+            background: #4CAF50;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        header h2 {
+            margin: 0;
+            font-weight: normal;
+        }
+
+        section {
+            padding: 1rem;
+            margin: 1rem auto;
+            max-width: 800px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background: #f9f9f9;
+        }
+
+        section h3 {
+            margin-top: 0;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: #4CAF50;
+            color: #fff;
+            position: fixed;
+            bottom: 0;
             width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
         }
-        table, th, td {
-            border: 1px solid #dee2e6;
-        }
-        th, td {
-            padding: 15px;
-            text-align: left;
-        }
-        th {
-            background-color: #f8f9fa;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+
+        @media (max-width: 600px) {
+            section {
+                margin: 0.5rem;
+                padding: 0.5rem;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Review Jurnal Terakreditasi</h1>
-        <h2>Jurnal 1</h2>
-        <p><strong>Judul Jurnal:</strong> Pengaruh Pendidikan Terhadap Pertumbuhan Ekonomi</p>
-        <p><strong>Penulis:</strong> Ahmad Budi</p>
-        <p><strong>Abstrak:</strong> Artikel ini membahas dampak pendidikan terhadap pertumbuhan ekonomi di Indonesia. Studi ini menggunakan data dari BPS dan metode analisis regresi.</p>
-        <p><strong>Metodologi:</strong> Penelitian menggunakan pendekatan kuantitatif dengan data sekunder dari BPS. Metode analisis yang digunakan adalah regresi linear.</p>
-        <p><strong>Hasil:</strong> Hasil penelitian menunjukkan bahwa pendidikan memiliki pengaruh signifikan terhadap pertumbuhan ekonomi.</p>
-        <p><strong>Kesimpulan:</strong> Pendidikan merupakan faktor penting dalam mendorong pertumbuhan ekonomi di Indonesia. Oleh karena itu, investasi di sektor pendidikan harus ditingkatkan.</p>
-        <p><strong>URL Jurnal:</strong> <a href="#">Link Jurnal 1</a></p>
-    
-        <h2>Jurnal 2</h2>
-        <p><strong>Judul Jurnal:</strong> Analisis Dampak Kebijakan Fiskal Terhadap Inflasi</p>
-        <p><strong>Penulis:</strong> Siti Rahayu</p>
-        <p><strong>Abstrak:</strong> Penelitian ini menganalisis dampak kebijakan fiskal terhadap inflasi di Indonesia menggunakan data dari tahun 2000 hingga 2020.</p>
-        <p><strong>Metodologi:</strong> Penelitian ini menggunakan metode ekonometrika dengan model ARIMA untuk memprediksi inflasi.</p>
-        <p><strong>Hasil:</strong> Kebijakan fiskal yang ekspansif cenderung meningkatkan inflasi dalam jangka pendek, namun tidak signifikan dalam jangka panjang.</p>
-        <p><strong>Kesimpulan:</strong> Kebijakan fiskal harus diterapkan dengan hati-hati untuk menghindari tekanan inflasi.</p>
-        <p><strong>URL Jurnal:</strong> <a href="#">Link Jurnal 2</a></p>
-    
-        <h2>Komti</h2>
-        <table>
-            <tr>
-                <th>Nama</th>
-                <th>NIM</th>
-                <th>Alamat Website</th>
-            </tr>
-            <tr>
-                <td>Ahmad Budi</td>
-                <td>123456789</td>
-                <td><a href="#">Link Website 1</a></td>
-            </tr>
-            <tr>
-                <td>Siti Rahayu</td>
-                <td>987654321</td>
-                <td><a href="#">Link Website 2</a></td>
-            </tr>
-            <tr>
-                <td>Andi Pratama</td>
-                <td>135792468</td>
-                <td><a href="#">Link Website 3</a></td>
-            </tr>
-            <tr>
-                <td>Dewi Sartika</td>
-                <td>246813579</td>
-                <td><a href="#">Link Website 4</a></td>
-            </tr>
-            <tr>
-                <td>Budi Santoso</td>
-                <td>123498765</td>
-                <td><a href="#">Link Website 5</a></td>
-            </tr>
-        </table>
-    </div>
+    <header>
+        <h1>Review Jurnal</h1>
+        <h2>BIOEDUCATION JOURNAL</h2>
+    </header>
+
+    <section id="journal-info">
+        <h3>Informasi Jurnal</h3>
+        <p><strong>Judul:</strong> Peningkatan Keterampilan Berpikir Tingkat Tinggi Mahasiswa Melalui Penerapan Asesmen Portofolio Pada Mata Kuliah Telaah Kurikulum Dan Buku Ajar Biologi</p>
+        <p><strong>Nama Jurnal:</strong> BIOEDUCATION JOURNAL</p>
+        <p><strong>Volume dan Halaman:</strong> Volume 1, Nomor 1, halaman 22-33</p>
+        <p><strong>Tahun Terbit:</strong> 2017</p>
+        <p><strong>Penulis:</strong> Yosi Laila Rahmi, Heffi Alberida</p>
+    </section>
+
+    <section id="background">
+        <h3>Latar Belakang Masalah</h3>
+        <p>Jurnal ini membahas tentang pentingnya meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa dalam menghadapi perubahan zaman dan teknologi. Kurikulum biologi yang terus berkembang menuntut siswa untuk memiliki kemampuan berpikir kritis, analitis, dan kreatif. Namun, banyak siswa yang masih kesulitan dalam mengembangkan keterampilan ini. Salah satu faktor yang menyebabkan kesulitan ini adalah kurangnya penggunaan metode pembelajaran yang tepat. Metode pembelajaran tradisional yang berfokus pada hafalan dan latihan soal tidak efektif untuk mengembangkan HOTS. Oleh karena itu, diperlukan metode pembelajaran yang lebih inovatif dan berpusat pada siswa.</p>
+    </section>
+
+    <section id="purpose">
+        <h3>Tujuan Penelitian</h3>
+        <p>Penelitian ini bertujuan untuk mendeskripsikan peningkatan kemampuan berpikir tingkat tinggi siswa menerapkan penilaian portofolio.</p>
+    </section>
+
+    <section id="method">
+        <h3>Metode Penelitian</h3>
+        <p>Metode yang digunakan dalam penelitian ini adalah penelitian tindakan kelas (action research).</p>
+    </section>
+
+    <section id="results">
+        <h3>Hasil Penelitian</h3>
+        <p>Penelitian ini menemukan bahwa penggunaan penilaian portofolio terbukti efektif dalam meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa pada mata pelajaran biologi. Hal ini ditunjukkan dengan peningkatan kemampuan siswa dalam menganalisis informasi, memecahkan masalah, dan berpikir secara kreatif. Penelitian ini juga mengidentifikasi beberapa faktor yang memengaruhi efektivitas penilaian portofolio, yaitu kualitas portofolio, keterlibatan siswa, dan umpan balik konstruktif dari guru. Portofolio yang berkualitas tinggi, partisipasi aktif siswa, dan arahan yang jelas dari guru terbukti meningkatkan efektivitas metode ini dalam mengembangkan HOTS siswa.</p>
+    </section>
+
+    <section id="advantages">
+        <h3>Kelebihan Penelitian</h3>
+        <p>Kelebihan utama penelitian ini adalah relevansinya dengan kebutuhan pendidikan modern yang menuntut kemampuan berpikir tingkat tinggi dalam menghadapi perkembangan zaman dan teknologi. Pendekatan praktis yang digunakan, yaitu penilaian portofolio, memberikan metode yang langsung dapat diterapkan dalam proses belajar mengajar. Fokus penelitian pada mahasiswa yang mengambil mata kuliah spesifik di Fakultas Biologi UNP memberikan gambaran yang jelas mengenai efektivitas metode penilaian tersebut pada kelompok sasaran yang konkret. Selain itu, penggunaan metodologi penelitian tindakan kelas memungkinkan adanya pengamatan langsung terhadap perubahan dan perkembangan kemampuan berpikir mahasiswa, serta memberikan kesempatan untuk perbaikan berkelanjutan. Data empiris yang dihasilkan menunjukkan adanya peningkatan kemampuan berpikir tingkat tinggi pada mahasiswa, sehingga dapat menjadi dasar bagi pengembangan metode pengajaran yang lebih efektif.</p>
+    </section>
+
+    <section id="disadvantages">
+        <h3>Kekurangan Penelitian</h3>
+        <p>Penelitian ini juga memiliki beberapa kekurangan. Generalisasi hasil penelitian terbatas karena dilakukan pada satu fakultas dengan mata kuliah yang spesifik, sehingga mungkin tidak dapat diterapkan ke seluruh mahasiswa atau mata kuliah lainnya. Durasi penelitian yang hanya berlangsung satu semester mungkin tidak cukup untuk melihat perubahan jangka panjang dalam kemampuan berpikir mahasiswa, dan penelitian jangka panjang mungkin diperlukan. Penilaian portofolio sering kali melibatkan unsur subjektivitas, baik dari sisi dosen maupun mahasiswa, yang bisa mempengaruhi keakuratan dan konsistensi hasil. Selain itu, penelitian tindakan kelas sering kali tidak memiliki kelompok kontrol yang jelas, sehingga sulit memastikan bahwa peningkatan kemampuan berpikir tingkat tinggi semata-mata disebabkan oleh penilaian portofolio, bukan oleh faktor-faktor lain. Variabilitas dalam implementasi penilaian portofolio oleh dosen juga dapat mempengaruhi hasil, sehingga standarisasi mungkin diperlukan untuk memastikan konsistensi.</p>
+    </section>
+
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <footer>
+        <p>&copy; 2024 SANEPRA BR TARIGAN. All rights reserved.</p>
+    </footer>
 </body>
 </html>
