--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Jurnal - BIOEDUCATION JOURNAL</title>
+    <title>Review Jurnal - Sanepra Br Tarigan</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
+            color: #333;
+        }
+        .detail-item {
+            display: grid; /* Gunakan display grid */
+            grid-template-columns: 150px 1fr; /* Tentukan dua kolom, pertama 150px dan kedua fleksibel */
+            gap: 10px; /* Tambahkan jarak antar kolom */
+            margin-bottom: 10px; /* Tambahkan jarak antar detail item */
+        }
+
+        .detail-item label {
+            font-weight: bold; /* Tambahkan ketebalan font */
+        }
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
         header {
-            background: #4CAF50;
+            padding: 20px 0;
+            border-bottom: 1px solid #ddd;
+            background: #6fac71;
             color: #fff;
             padding: 1rem 0;
             text-align: center;
@@ -21,95 +42,135 @@
 
         header h1 {
             margin: 0;
+            font-size: 2em;
         }
 
-        header h2 {
-            margin: 0;
-            font-weight: normal;
+        header p {
+            margin: 10px 0 0;
+            font-size: 1em;
+            color: #666;
         }
 
-        section {
-            padding: 1rem;
-            margin: 1rem auto;
-            max-width: 800px;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        table, th, td {
             border: 1px solid #ddd;
-            border-radius: 5px;
-            background: #f9f9f9;
         }
 
-        section h3 {
-            margin-top: 0;
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+            min-width: 200px; /* Menentukan lebar minimum */
+        }
+
+        .text-right {
+            text-align: right;
         }
 
         footer {
             text-align: center;
-            padding: 1rem;
-            background: #4CAF50;
-            color: #fff;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 20px 0;
+            border-top: 1px solid #ddd;
+            margin-top: 20px;
         }
 
-        @media (max-width: 600px) {
-            section {
-                margin: 0.5rem;
-                padding: 0.5rem;
-            }
+        footer p {
+            margin: 0;
+            color: #666;
+        }
+
+        .centered-link {
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Review Jurnal</h1>
-        <h2>BIOEDUCATION JOURNAL</h2>
-    </header>
-
-    <section id="journal-info">
-        <h3>Informasi Jurnal</h3>
-        <p><strong>Judul:</strong> Peningkatan Keterampilan Berpikir Tingkat Tinggi Mahasiswa Melalui Penerapan Asesmen Portofolio Pada Mata Kuliah Telaah Kurikulum Dan Buku Ajar Biologi</p>
-        <p><strong>Nama Jurnal:</strong> BIOEDUCATION JOURNAL</p>
-        <p><strong>Volume dan Halaman:</strong> Volume 1, Nomor 1, halaman 22-33</p>
-        <p><strong>Tahun Terbit:</strong> 2017</p>
-        <p><strong>Penulis:</strong> Yosi Laila Rahmi, Heffi Alberida</p>
-    </section>
-
-    <section id="background">
-        <h3>Latar Belakang Masalah</h3>
-        <p>Jurnal ini membahas tentang pentingnya meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa dalam menghadapi perubahan zaman dan teknologi. Kurikulum biologi yang terus berkembang menuntut siswa untuk memiliki kemampuan berpikir kritis, analitis, dan kreatif. Namun, banyak siswa yang masih kesulitan dalam mengembangkan keterampilan ini. Salah satu faktor yang menyebabkan kesulitan ini adalah kurangnya penggunaan metode pembelajaran yang tepat. Metode pembelajaran tradisional yang berfokus pada hafalan dan latihan soal tidak efektif untuk mengembangkan HOTS. Oleh karena itu, diperlukan metode pembelajaran yang lebih inovatif dan berpusat pada siswa.</p>
-    </section>
-
-    <section id="purpose">
-        <h3>Tujuan Penelitian</h3>
-        <p>Penelitian ini bertujuan untuk mendeskripsikan peningkatan kemampuan berpikir tingkat tinggi siswa menerapkan penilaian portofolio.</p>
-    </section>
-
-    <section id="method">
-        <h3>Metode Penelitian</h3>
-        <p>Metode yang digunakan dalam penelitian ini adalah penelitian tindakan kelas (action research).</p>
-    </section>
-
-    <section id="results">
-        <h3>Hasil Penelitian</h3>
-        <p>Penelitian ini menemukan bahwa penggunaan penilaian portofolio terbukti efektif dalam meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa pada mata pelajaran biologi. Hal ini ditunjukkan dengan peningkatan kemampuan siswa dalam menganalisis informasi, memecahkan masalah, dan berpikir secara kreatif. Penelitian ini juga mengidentifikasi beberapa faktor yang memengaruhi efektivitas penilaian portofolio, yaitu kualitas portofolio, keterlibatan siswa, dan umpan balik konstruktif dari guru. Portofolio yang berkualitas tinggi, partisipasi aktif siswa, dan arahan yang jelas dari guru terbukti meningkatkan efektivitas metode ini dalam mengembangkan HOTS siswa.</p>
-    </section>
-
-    <section id="advantages">
-        <h3>Kelebihan Penelitian</h3>
-        <p>Kelebihan utama penelitian ini adalah relevansinya dengan kebutuhan pendidikan modern yang menuntut kemampuan berpikir tingkat tinggi dalam menghadapi perkembangan zaman dan teknologi. Pendekatan praktis yang digunakan, yaitu penilaian portofolio, memberikan metode yang langsung dapat diterapkan dalam proses belajar mengajar. Fokus penelitian pada mahasiswa yang mengambil mata kuliah spesifik di Fakultas Biologi UNP memberikan gambaran yang jelas mengenai efektivitas metode penilaian tersebut pada kelompok sasaran yang konkret. Selain itu, penggunaan metodologi penelitian tindakan kelas memungkinkan adanya pengamatan langsung terhadap perubahan dan perkembangan kemampuan berpikir mahasiswa, serta memberikan kesempatan untuk perbaikan berkelanjutan. Data empiris yang dihasilkan menunjukkan adanya peningkatan kemampuan berpikir tingkat tinggi pada mahasiswa, sehingga dapat menjadi dasar bagi pengembangan metode pengajaran yang lebih efektif.</p>
-    </section>
-
-    <section id="disadvantages">
-        <h3>Kekurangan Penelitian</h3>
-        <p>Penelitian ini juga memiliki beberapa kekurangan. Generalisasi hasil penelitian terbatas karena dilakukan pada satu fakultas dengan mata kuliah yang spesifik, sehingga mungkin tidak dapat diterapkan ke seluruh mahasiswa atau mata kuliah lainnya. Durasi penelitian yang hanya berlangsung satu semester mungkin tidak cukup untuk melihat perubahan jangka panjang dalam kemampuan berpikir mahasiswa, dan penelitian jangka panjang mungkin diperlukan. Penilaian portofolio sering kali melibatkan unsur subjektivitas, baik dari sisi dosen maupun mahasiswa, yang bisa mempengaruhi keakuratan dan konsistensi hasil. Selain itu, penelitian tindakan kelas sering kali tidak memiliki kelompok kontrol yang jelas, sehingga sulit memastikan bahwa peningkatan kemampuan berpikir tingkat tinggi semata-mata disebabkan oleh penilaian portofolio, bukan oleh faktor-faktor lain. Variabilitas dalam implementasi penilaian portofolio oleh dosen juga dapat mempengaruhi hasil, sehingga standarisasi mungkin diperlukan untuk memastikan konsistensi.</p>
-    </section>
-
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <footer>
-        <p>&copy; 2024 SANEPRA BR TARIGAN. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Review Jurnal</h1>
+            <p>oleh Sanepra Br Tarigan</p>
+        </header>
+        <section>
+            <h2>Detail Jurnal</h2>
+            <div class="detail-item">
+                <label>Nama</label>
+                <span>: Sanepra Br Tarigan</span>
+            </div>
+            <div class="detail-item">
+                <label>NIM</label>
+                <span>: 223020209029</span>
+            </div>
+            <div class="detail-item">
+                <label>Kelas</label>
+                <span>: A</span>
+            </div>
+            <div class="detail-item">
+                <label>Mata Kuliah</label>
+                <span>: Penilaian Hasil Belajar Biologi</span>
+            </div>
+            <div class="centered-link">
+            <a href="https://ejournal.unp.ac.id/index.php/bioeducation/article/view/7150">https://ejournal.unp.ac.id/index.php/bioeducation/article/view/7150</a>
+            <table>
+            </div>
+            <tr>
+                <th>Judul</th>
+                <td style="text-align: justify;">Peningkatan Keterampilan Berpikir Tingkat Tinggi Mahasiswa Melalui Penerapan Asesmen Portofolio Pada Mata Kuliah Telaah Kurikulum Dan Buku Ajar Biologi</td>
+            </tr>
+            <tr>
+                <th>Nama Jurnal</th>
+                <td style="text-align: justify;">BIOEDUCATION JOURNAL</td>
+            </tr>
+            <tr>
+                <th>Volume dan Halaman</th>
+                <td style="text-align: justify;">Volume 1 Nomor 1 halaman 22-33</td>
+            </tr>
+            <tr>
+                <th>Tahun Terbit</th>
+                <td style="text-align: justify;">2017</td>
+            </tr>
+            <tr>
+                <th>Penulis</th>
+                <td style="text-align: justify;">Yosi Laila Rahmi Heffi Alberida</td>
+            </tr>
+            <tr>
+                <th>Latar Belakang Masalah</th>
+                <td style="text-align: justify;">Latar Belakang masalah	Jurnal ini membahas tentang pentingnya meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa dalam menghadapi perubahan zaman dan teknologi. Kurikulum biologi yang terus berkembang menuntut siswa untuk memiliki kemampuan berpikir kritis, analitis, dan kreatif. Namun, banyak siswa yang masih kesulitan dalam mengembangkan keterampilan ini. Salah satu faktor yang menyebabkan kesulitan ini adalah kurangnya penggunaan metode pembelajaran yang tepat. Metode pembelajaran tradisional yang berfokus pada hafalan dan latihan soal tidak efektif untuk mengembangkan HOTS. Oleh karena itu, diperlukan metode pembelajaran yang lebih inovatif dan berpusat pada siswa.</td>
+            </tr>
+            <tr>
+                <th>Tujuan Penelitian</th>
+                <td style="text-align: justify;">Penelitian ini bertujuan untuk mendeskripsikan peningkatan kemampuan berpikir tingkat tinggi siswa menerapkan penilaian portofolio.</td>
+            </tr>
+            <tr>
+                <th>Metode Penelitian</th>
+                <td style="text-align: justify;">Metode yang digunakan dalam penelitian ini adalah penelitian tindakan kelas (action research).</td>
+            </tr>
+            <tr>
+                <th>Hasil Penelitian</th>
+                <td style="text-align: justify;">Penelitian ini menemukan bahwa penggunaan penilaian portofolio terbukti efektif dalam meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa pada mata pelajaran biologi. Hal ini ditunjukkan dengan peningkatan kemampuan siswa dalam menganalisis informasi, memecahkan masalah, dan berpikir secara kreatif. Penelitian ini juga mengidentifikasi beberapa faktor yang memengaruhi efektivitas penilaian portofolio, yaitu kualitas portofolio, keterlibatan siswa, dan umpan balik konstruktif dari guru. Portofolio yang berkualitas tinggi, partisipasi aktif siswa, dan arahan yang jelas dari guru terbukti meningkatkan efektivitas metode ini dalam mengembangkan HOTS siswa.</td>
+            </tr>
+            <tr>
+                <th>Kelebihan Penelitian</th>
+                <td style="text-align: justify;">Penelitian ini menemukan bahwa penggunaan penilaian portofolio terbukti efektif dalam meningkatkan keterampilan berpikir tingkat tinggi (HOTS) siswa pada mata pelajaran biologi. Hal ini ditunjukkan dengan peningkatan kemampuan siswa dalam menganalisis informasi, memecahkan masalah, dan berpikir secara kreatif. Penelitian ini juga mengidentifikasi beberapa faktor yang memengaruhi efektivitas penilaian portofolio, yaitu kualitas portofolio, keterlibatan siswa, dan umpan balik konstruktif dari guru. Portofolio yang berkualitas tinggi, partisipasi aktif siswa, dan arahan yang jelas dari guru terbukti meningkatkan efektivitas metode ini dalam mengembangkan HOTS siswa.</td>
+            </tr>
+            <tr>
+                <th>Kekurangan Penelitian</th>
+                <td style="text-align: justify;">Penelitian ini juga memiliki beberapa kekurangan. Generalisasi hasil penelitian terbatas karena dilakukan pada satu fakultas dengan mata kuliah yang spesifik, sehingga mungkin tidak dapat diterapkan ke seluruh mahasiswa atau mata kuliah lainnya. Durasi penelitian yang hanya berlangsung satu semester mungkin tidak cukup untuk melihat perubahan jangka panjang dalam kemampuan berpikir mahasiswa, dan penelitian jangka panjang mungkin diperlukan. Penilaian portofolio sering kali melibatkan unsur subjektivitas, baik dari sisi dosen maupun mahasiswa, yang bisa mempengaruhi keakuratan dan konsistensi hasil. Selain itu, penelitian tindakan kelas sering kali tidak memiliki kelompok kontrol yang jelas, sehingga sulit memastikan bahwa peningkatan kemampuan berpikir tingkat tinggi semata-mata disebabkan oleh penilaian portofolio, bukan oleh faktor-faktor lain. Variabilitas dalam implementasi penilaian portofolio oleh dosen juga dapat mempengaruhi hasil, sehingga standarisasi mungkin diperlukan untuk memastikan konsistensi.</td>
+            </tr>
+            
+            </table>
+        </section>
+        <footer>
+            <p>&copy; 2024 Sanepra Br Tarigan. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
